Updated the XML and SDK versions
git-svn-id: https://android-pedometer.googlecode.com/svn/trunk@15 95211bb4-50e8-d443-7375-96c2697b8c44

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,9 @@
 <resources>
     <string name="app_name">Pedometer</string>
     <string name="sensitivity">Sensitivity\n(lower = more sensitive)</string>
+    
+    <string name="sensitivity_text">"Sensitivity:"</string>
+    <string name="sensitivity_hint">"Sensitivity"</string>
+    
+    <string name="default_text">"Steps = 0"</string>
 </resources>
